k8s/www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  namespace: singhsabha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: www
          image: ghcr.io/singh-sabha/www:v1.3.0
          ports:
            - containerPort: 4000
