k8s/www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
  namespace: singhsabha
  labels:
    app: www
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
    - name: http
      port: 4000
      targetPort: 4000
    - name: metrics
      port: 4021
      targetPort: 4021
---
apiVersion: v1
kind: Service
metadata:
  name: www-headless
  namespace: singhsabha
spec:
  clusterIP: None
  selector:
    app: www
