k8s/www/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  namespace: apps-singhsabha
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - singhsabha.net
        - www.singhsabha.net
      secretName: www-tls
  rules:
    - host: singhsabha.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 4000
    - host: www.singhsabha.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 4000
